--- a/command.html
+++ b/command.html
@@ -25,18 +25,18 @@ history delete-        ipconfig/flushdns</br>
 color chang</br>  
        help color</br>
 
-Update All Applications or Software</br>
+<h2>Update All Applications or Software</h2>
                             winget upgrade</br>
                             winget upgrade --all </br>
 
 
 
-current weather</br>
+<h2>current weather</h2>
                             @echo off</br>
                             curl wttr.in/Tejgaon</br>
 
 
-Win + R trick</br>
+<h2>Win + R trick</h2>
 
 
 how many software install in my PC check: shell:appsfolder</br>
