--- a/command.html
+++ b/command.html
@@ -8,7 +8,7 @@
               <meta name="language" content="English">
               <meta name="revisit-after" content="3 days">
               <meta name="author" content="Montasir-alam">
-              <title>PHPbasic</title>
+              <title>-Win-PowerShell-config</title>
        </head>
        <bod>
        <h2>Find out the IP address</h2>
